kubernetes/apps/storage-system/rook-ceph/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-rgw-ceph-objectstore-external
  annotations:
    external-dns.kubernetes.io/hostname: "s3.noirprime.com"
    lbipam.cilium.io/ips: "10.10.0.134"
spec:
  type: LoadBalancer
  selector:
    app: rook-ceph-rgw
    rook_cluster: storage-system
    rook_object_store: ceph-objectstore
  ports:
    - name: rgw
      port: 80
      protocol: TCP
      targetPort: 80
